# hikvision-face-terminal-addon

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  config.yaml  pyproject.toml  repository.yaml
hikvision_face_terminal/: listener.py
tests/: conftest.py  test_backend_forwarder.py  test_config.py  test_ha_webhook.py  test_listener_run.py  test_listener_smoke.py  test_parser.py
tests/fixtures/: dsk1t344_alertstream_first.raw  dsk1t344_f4_capture.raw
